src/cli/agent_tree/snapshots/dispatch_tui__cli__agent_tree__tests__collapsed_directory_full_sum.snap
---
source: src/cli/agent_tree/tests.rs
expression: out
---
┌ dispatch ──────────────────────────────────────┐
│▶ src +52 -10                                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
