src/cli/agent_tree/snapshots/dispatch_tui__cli__agent_tree__tests__counts_alongside_badge.snap
---
source: src/cli/agent_tree/tests.rs
expression: out
---
┌ task ────────────────────────────────────────────────────┐
│    a.rs [Modified] +2 -1                                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
