src/cli/agent_tree/snapshots/dispatch_tui__cli__agent_tree__tests__file_row_line_counts.snap
---
source: src/cli/agent_tree/tests.rs
expression: out
---
┌ task ────────────────────────────────────────────────────┐
│    a.rs [Modified] +12 -3                                │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
