src/cli/agent_tree/snapshots/dispatch_tui__cli__agent_tree__tests__snapshot_added_modified_and_deleted_badges.snap
---
source: src/cli/agent_tree.rs
expression: rendered
---
┌ dispatch ──────────────────────────────────────┐
│    README.md [Deleted]                         │
│▼ src                                           │
│      lib.rs [Modified]                         │
│      new.rs [Added]                            │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
