src/cli/agent_tree/snapshots/dispatch_tui__cli__agent_tree__tests__summed_line_counts.snap
---
source: src/cli/agent_tree/tests.rs
expression: out
---
┌ task ────────────────────────────────────────────────────┐
│▼ src +17 -4                                              │
│      a.rs [Modified] +12 -3                              │
│      b.rs [Added] +5 -1                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
